objects/Counter__c.object
<CustomObject>
    <description>Counts the CampaignMember for the Marketing Cloud SFC-3102</description>
    <label>Counter</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Counter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Counters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaignmembers__c</fullName>
        <label>Campaignmembers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Campaignmembers__c</fullName>
        <label>Max Campaignmembers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>